# QuicFuscate

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.advanced_fec_test  Makefile.cli  Makefile.fec  Makefile.http3  Makefile.http3simple  Makefile.simple  Makefile.tests  Makefile.tetrys_test  Makefile.utls  README.md  build.rs  check.md  documentation.md  merge_mtu_files.sh  optimizations_cmake.txt  run_tests.sh  test_utls.cpp  test_utls_simple.cpp
.cargo/: config.toml
.history/: README_20250515000218.md  README_20250515001201.md  README_20250515001217.md  README_20250515004558.md  build_20250515004750.sh  ca_20250515003012.crt  config_20250515003926.yaml  config_20250515004009.go  config_20250516120026.yaml  fake_tls_20250515003459.go  fake_tls_20250515004353.go  fec_20250515003225.go  go_20250515002525.mod  go_20250516190308.mod  install_20250515004640.sh  keepalive_20250515004507.go  mtu_detection_20250515004156.go  tetrys_20250515003737.go
Rust-QuicFuscate/: Cargo.toml  README.md
Rust-QuicFuscate/cli/: Cargo.toml
Rust-QuicFuscate/cli/src/: main.rs  quicfuscate_client.rs
Rust-QuicFuscate/cli/tests/: cli_tests.rs
benches/: fec_modes.rs  gf_bitslice.rs  gf_bitslice_bench.rs  gf_mul.rs  gf_mul_slice_bench.rs  memory_pool.rs  simd.rs  xdp_throughput.rs
browser_profiles/: README.md  edge_android.chlo  firefox_windows.chlo
cli/: CMakeLists.txt  main.cpp  openssl_raii.hpp  options.hpp  quicfuscate_cli.cpp  quicfuscate_client.cpp  quicfuscate_server.cpp  quicsand_cli.cpp  quicsand_client.cpp  quicsand_server.cpp
core/: CMakeLists.txt  bbr_v2.cpp  bbr_v2.hpp  bbr_v2_fixed.cpp  burst_buffer.cpp  burst_buffer.hpp  cache_optimizations.hpp  common_configs.hpp  ebpf_zero_copy.cpp  ebpf_zero_copy.hpp  energy_optimizations.hpp  error_handling.hpp  error_handling_example.cpp  error_handling_mtu_integration.cpp  memory_pool.hpp  optimizations_integration.hpp  quic.hpp  quic_connection.cpp  quic_connection.hpp  quic_connection_congestion.cpp  quic_connection_impl.cpp  quic_connection_mtu.cpp  quic_connection_perf.cpp  quic_connection_update.cpp  quic_connection_xdp.cpp  quic_constants.hpp  quic_core_types.hpp  quic_integration_impl.cpp  quic_packet.cpp  quic_packet.hpp  quic_path_mtu_manager.cpp  quic_path_mtu_manager.hpp  quic_path_mtu_manager_part1.cpp  quic_path_mtu_manager_part2.cpp  quic_path_mtu_manager_part3.cpp  quic_stream.cpp  quic_stream.hpp  quic_stream_impl.cpp  simd_feature_detection.cpp  simd_feature_detection.hpp  (+15 more)
crypto/: CMakeLists.txt  aegis128l.cpp  aegis128l.hpp  aegis128x.cpp  aegis128x.hpp  aes128gcm.cpp  aes128gcm.hpp  aes128gcm_optimized.cpp  aes128gcm_optimized.hpp  aes_gcm.cpp  aes_gcm.hpp  ascon.cpp  ascon.hpp  cipher_suite_selector.cpp  cipher_suite_selector.hpp  morus.cpp  morus.hpp  morus1280.cpp  morus1280.hpp
docs/: Changelog.md  DOCUMENTATION.md  PLAN.txt  Quiche_Dependency.md  README.md  USAGE.md  Workflow_Patches.md  api_documentation_core.md  api_documentation_index.md  api_documentation_optimizations.md  api_documentation_simd.md  api_documentation_stealth.md  example_config.toml  gf_bitslice_bench.md  quic_transport_simd_integration.md  todo.md
examples/: integrated_example.cpp
fec/: CMakeLists.txt  FEC_Modul.cpp  FEC_Modul.hpp  memory_optimized_span.hpp  tetrys.cpp  tetrys.hpp  tetrys_fec.cpp  tetrys_fec.hpp  tetrys_fec_optimized.cpp  tetrys_fec_optimized.hpp
flutter_ui/: main.dart  pubspec.yaml
optimize/: quic_stream_optimizer.cpp  unified_optimizations.hpp
patches/: quiche_utls_bbrv2_fec.patch
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: lib.rs  main.rs  options.rs  quicfuscate_client.rs  quicfuscate_server.rs
rust/cli/tests/: cli_tests.rs
rust/core/: Cargo.toml  build.rs
rust/core/src/: ffi.cpp  lib.rs  quic_packet.rs
rust/core/tests/: bbr_controller.rs  path_mtu_manager.rs  quic_connection.rs  quic_stream_optimizer.rs
rust/fec/: Cargo.toml  build.rs
rust/fec/benches/: bench.rs
rust/fec/src/: lib.rs
rust/fec/tests/: ffi.rs  unit.rs
rust/stealth/: Cargo.toml  build.rs
rust/stealth/src/: browser.rs  datagram.rs  doh.rs  domain_fronting.rs  fake_tls.rs  ffi.cpp  http3_masq.rs  lib.rs  qpack.rs  spinbit.rs  stream.rs  xor.rs  zero_rtt.rs
scripts/: benchmark.sh  benchmark_advanced.sh  build_advanced.sh  config.sh  configure_quiche.sh  fetch_quiche.sh  logger.sh  maintain_quiche.sh  manage_patches.sh  monitor.sh  optimize_master.sh  optimize_quiche.sh  optimize_quiche_pgo.sh  optimize_system.sh  optimize_system_advanced.sh  quiche_optimize.sh  quiche_workflow.sh  setup_quiche.sh  test_advanced.sh  update_deps.sh  update_quiche.sh
simd/: arm_simd_impl.cpp  simd_dispatcher.cpp  x86_simd_impl.cpp
src/: app_config.rs  core.rs  crypto.rs  error.rs  fake_tls.rs  fec.rs  lib.rs  main.rs  optimize.rs  pq.rs  stealth.rs  telemetry.rs  tls_ffi.rs  xdp_socket.rs
stealth/: CMakeLists.txt  DoH.cpp  DoH.hpp  DomainFronting.cpp  DomainFronting.hpp  FakeTLS.cpp  FakeTLS.hpp  QuicFuscate_Stealth.cpp  QuicFuscate_Stealth.hpp  XOR_Obfuscation.cpp  XOR_Obfuscation.hpp  anti_fingerprinting.hpp  dpi_evasion.cpp  dpi_evasion.hpp  fake_headers.cpp  fake_headers.hpp  fake_tls.cpp  (+27 more)
tests/: CMakeLists.txt  Makefile.simd  Makefile.simd_simple  Makefile.simple  aegis128l_test.cpp  aegis_stub.cpp  aes_gcm_test.cpp  bbr_v2_simple_test.cpp  bbr_v2_test.cpp  cipher_selector.rs  connection_features_test.cpp  core_integration.rs  cross_fade.rs  crypto_tests.rs  dpi_evasion_test.cpp  fake_tls.rs  fec.rs  fec_module_test.cpp  fec_optimization_integration_test.cpp  fec_small_window.rs  fec_test.cpp  high_loss.rs  http3_masquerading_simple_test.cpp  http3_masquerading_test.cpp  integration.rs  memory_pool_test.cpp  morus_test.cpp  optimizations_test.cpp  optimize.rs  path_mtu_manager_test.cpp  path_mtu_probe_logic_test.cpp  performance_test.cpp  platform_simd_test.cpp  quic_connection_test.cpp  quic_simd_integration_test.cpp  quic_unified_manager_test.cpp  quiche_patch_failure.bats  quiche_workflow.bats  simd_comprehensive_benchmark.cpp  simd_end_to_end_test.cpp  (+26 more)
(+186 files in other folders)
