[package]
name = "quicfuscate"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned_box = "0.2"
quiche = { path = "libs/patched_quiche/quiche" }
rustls = "0.22.2"
aegis = { version = "0.9.0", features = ["aegis-128x"] }
morus = "0.1.3"
aead = { version = "0.5.2", features = ["alloc"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11.3"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
cpufeatures = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-queue = "0.3"
libc = "0.2"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
sha2 = "0.10"

