[package]
name = "quicfuscate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aligned_box = "0.2"
# Fallback to the crates.io release of quiche when the patched sources
# are not present. This still builds BoringSSL via the bundled sources.
quiche = "0.24.4"
rustls = "0.22.2"
aegis = { version = "0.9.0", features = ["rustcrypto-traits-06"] }
morus = "0.1.3"
aead = { version = "0.6.0-rc.0", features = ["alloc"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11.3"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
cpufeatures = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-queue = "0.3"
libc = "0.2"
sha2 = "0.10"
rayon = "1.9"
toml = "0.8"
prometheus = "0.13"
sysinfo = "0.35"
socket2 = "0.5"
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }

[target.'cfg(target_os = "linux")'.dependencies]
# direct FFI to libnuma, no crate dependency

afxdp = { version = "0.4", optional = true }

[features]
xdp = ["afxdp"]

[dev-dependencies]
hex="0.4"
criterion="0.5"
