[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
thiserror = "1"
once_cell = "1"
quiche = { path = "../../libs/quiche-patched/quiche", optional = true }
quicfuscate-error = { path = "../error" }
log = "0.4"

[features]
default = []
quiche = ["dep:quiche"]
