[package]
name = "fec"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
rlnc = "0.3"
leopard-codec = "0.1"
reed-solomon-erasure = "6"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand09 = { package = "rand", version = "0.9.1" }
quicfuscate-error = { path = "../error" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
