[package]
name = "stealth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
quicfuscate-error = { path = "../error" }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1", optional = true }
log = "0.4"

[features]
doh-reqwest = ["reqwest", "serde_json"]
